--- a/backend-assignment/src/main/resources/application.yml
+++ b/backend-assignment/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: backend-assignment
   datasource:
-    url: jdbc:mysql://localhost:3306/ipl2
+    url: jdbc:mysql://localhost:3306/ipl
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -19,12 +19,12 @@ spring:
     host: localhost
     port: 6379
   kafka:
-    bootstrap-servers: localhost:9092  # Adjust if your Kafka broker is elsewhere
+    bootstrap-servers: localhost:9092
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
 server:
-  port: 9999
+  port: 8080
 
 logging:
   level:
