--- a/backend-assignment/pom.xml
+++ b/backend-assignment/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.indium</groupId>
 	<artifactId>backend-assignment</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>backend-assignment</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
@@ -27,7 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>22</java.version>
+		<java.version>21</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
