--- a/backend-assignment/kubernetes.yaml
+++ b/backend-assignment/kubernetes.yaml
@@ -16,23 +16,23 @@ spec:
     spec:
       containers:
         - name: backend-assignment
-          image: backend-assignment:1.0  # Updated image version
+          image: backend-assignment  # Updated image version
           ports:
-            - containerPort: 9090  # Original port
+            - containerPort: 9999  # Original port
           env:
             - name: KAFKA_HOST
               value: "host.docker.internal:9094"  # Updated Kafka host
             - name: REDIS_HOST
               value: "host.docker.internal"  # No change here
             - name: MYSQL_URL
-              value: "jdbc:mysql://host.docker.internal:3310/ipldp"  # Updated MySQL URL
+              value: "jdbc:mysql://host.docker.internal:3310/ipldb"  # Updated MySQL URL
           resources:
             requests:
-              memory: "512Mi"  # Increased from 128Mi
-              cpu: "500m"      # Increased from 250m
+              memory: "8Gi"  # Increased from 128Mi
+              cpu: "6000m"      # Increased from 250m
             limits:
-              memory: "1Gi"   # Increased from 256Mi
-              cpu: "1"        # Increased from 500m
+              memory: "8Gi"   # Increased from 256Mi
+              cpu: "6"        # Increased from 500m
 ---
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
@@ -45,7 +45,8 @@ spec:
     name: backend-assignment
   minReplicas: 1
   maxReplicas: 10
-  targetCPUUtilizationPercentage: 50
+  targetCPUUtilizationPercentage: 1000
+
 ---
 apiVersion: v1
 kind: Service
@@ -57,5 +58,5 @@ spec:
   type: NodePort
   ports:
     - port: 80
-      targetPort: 9090  # Original port
+      targetPort: 9999  # Original port
       nodePort: 30005
