--- a/backend-assignment/src/main/resources/application.yml
+++ b/backend-assignment/src/main/resources/application.yml
@@ -2,34 +2,18 @@ spring:
   application:
     name: backend-assignment
   datasource:
-    url: jdbc:mysql://localhost:3306/ipldb
+    url: jdbc:mysql://localhost:3310/ipldb
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
-    hibernate:
-      ddl-auto: update
     show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
+  data:
+    redis:
+      host: localhost
+      port: 6379
   cache:
     type: redis
-  redis:
-    host: localhost
-    port: 6379
-  kafka:
-    bootstrap-servers: localhost:9092
-    producer:
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
-server:
-  port: 9090
 
-logging:
-  level:
-    root: INFO
-    org.springframework.web: DEBUG
-    com.indium: DEBUG
-    org.hibernate.SQL: DEBUG
-    org.hibernate.tool.schema: DEBUG
+server:
+  port: 9999
