--- a/backend-assignment/src/main/resources/application.yml
+++ b/backend-assignment/src/main/resources/application.yml
@@ -14,6 +14,10 @@ spring:
       port: 6379
   cache:
     type: redis
-
+  kafka:
+    bootstrap-servers: localhost:9092  # Adjust if your Kafka broker is elsewhere
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
 server:
   port: 9999
